# cloud-native-gauntlet

./: .gitignore  README.md
apps/: README.md
apps/app1/: config.yaml  deployment.yaml  service.yaml
apps/app1/task-api/: .env.example
apps/app2/: config.yaml  deployment.yaml  service.yaml
apps/auth/: keycloak-deployment.yaml  keycloak-service.yaml  namespace.yaml  secret.yaml
apps/backend/: deployment.yaml  service.yaml  task-api-configmap.yaml  task-api-deployment.yaml  task-api-ingress.yaml  task-api-secret.yaml  task-api-service.yaml
apps/backend/task-api/: .env.example  Cargo.toml  Dockerfile  LOGGING.md  Readme.md  UUID_FIX.md  docker-compose.yml
apps/database/: cluster-app.yaml  cnpg-1.26.0.yaml  cnpg-1.27.0.yaml  db-secret.yaml
apps/gitops/argocd/: ingress.yaml  install.yaml  namespace.yaml
apps/linkerd/: control-plane.yaml  grafana.yaml  viz.yaml
docs/: PROJECT_STATUS.md
gitops/: README.md
gitops/app-source/: Dockerfile  Readme.md
gitops/infra/: README.md
gitops/infra/apps/backend/task-api/: Cargo.toml  Readme.md
gitops/infra/apps/backend/task-api/src/handlers/: logging_middleware.rs  mod.rs
gitops/infra/apps/backend/task-api/src/models/: logging.rs  role.rs  state.rs
gitops/scripts/: install-argocd.sh
infra/ansible/: configure-k3s.yml  inventory.ini  provision.yml  setup-registry.yml
infra/terraform/: cloud-init.tpl.yaml  main.tf  outputs.tf  variables.tf
kustomization/base/: kustomization.yaml
monitoring/: grafana.yaml  prometheus.yaml
monitoring/dashboards/: app-dashboard.json
scripts/: deploy.sh  setup.sh
(+45 files in other folders)
