[package]
name = "task-api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
hyper = "1.7.0"
rand_core = { version = "0.9.3", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
time = "0.3.41"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
axum-keycloak-auth = "0.8.3"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tower = { version = "0.5", features = ["util"] }
